--- a/dashboard.html
+++ b/dashboard.html
@@ -1,197 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Dashboard - Zaki Transporters</title>
     <link rel="icon" href="logo.jpg" type="image/jpg">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.7/tailwind.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        'custom-dark': '#0d1117',
+                        'custom-dark-secondary': '#161b22',
+                        'custom-accent': '#58a6ff',
+                        'custom-accent-hover': '#79b6ff',
+                    },
+                    animation: {
+                        'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+                    }
+                }
+            }
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://kit.fontawesome.com/d00c9b568a.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
     <script src="config.js"></script>
     <script src="auth.js"></script>
-
     <style>
-/* Paste your custom styles here */
-:root {
-    --bg-color: #f4f4f4;
-    --text-color: #000000;
-    --primary-color: #4b5563;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    background-image: url('oil.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; /* Add this line */
-}
-
-.dashboard-container a {
-    background-color: rgba(255, 255, 255, 0.5); /* Change this line */
-    color: #333;
-    border: 2px solid var(--primary-color); /* Primary color outer ring */
-    box-shadow: 0 0 10px var(--primary-color); /* Primary color box shadow */
-}
-
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.bg-primary {
-    background-color: var(--primary-color);
-}
-
-
-
-
-        .hover\:bg-primary:hover {
-            background-color: var(--primary-color);
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
         }
-
-        #user-menu {
-            display: none;
-        }
-
-        #user-menu:not(.hidden) {
-            display: block;
-        }
-
-        .modal-content {
-            background-color: #fff;
-            color: #333;
-            border: 1px solid #888;
-            width: 80%;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .welcome-container {
-            background-color: rgba(255, 255, 255, 0.8); /* 0.8 is the alpha value, adjust it to your liking */
-            padding: 20px; /* Add padding to give some space around the text */
-            border-radius: 10px; /* Optional: Add border-radius to make the corners rounded */
+        .float { animation: float 3s ease-in-out infinite; }
+        #particles-js {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
     </style>
-
 </head>
 
-<body>
+<body class="bg-custom-dark text-white flex flex-col min-h-screen">
+    <div id="particles-js"></div>
 
-    <div class="flex flex-col h-screen">
-        <div class="flex items-center justify-between bg-gray-200 p-4">
+    <!-- Glassy top bar -->
+    <header class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg sticky top-0 z-10 shadow-lg">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <link rel="icon" href="logo.jpg" type="image/jpg">
-                <h1 class="text-lg font-medium mr-4 animate" style="color: black;">ZAKI TRANSPORTERS</h1>
+                <img src="logo.jpg" alt="Zaki Transporters Logo" class="h-10 w-10 mr-2 rounded-full border-2 border-custom-accent animate-pulse-slow">
+                <h1 class="text-xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-custom-accent to-purple-400">ZAKI TRANSPORTERS</h1>
             </div>
-            <div class="flex items-center">
-                
-                <button type="button"
-                    class="bg-gray-300 text-gray-700 px-4 py-2 rounded-lg mr-2"
-                    title="Notification">
-                    <i class="fas fa-bell"></i>
+            <div class="flex items-center space-x-4">
+                <button type="button" class="text-custom-accent hover:text-custom-accent-hover transition-colors duration-300" title="Notification">
+                    <i class="fas fa-bell text-lg"></i>
                 </button>
-                <div class="flex items-center">
+                <div class="relative">
+                    <button class="text-custom-accent hover:text-custom-accent-hover transition-colors duration-300" id="user-button">
+                        Menu <i class="fas fa-caret-down ml-2"></i>
+                    </button>
+                    <div class="absolute right-0 mt-2 w-48 bg-custom-dark-secondary bg-opacity-90 backdrop-filter backdrop-blur-lg rounded-lg shadow-lg hidden" id="user-menu">
+                        <a href="#" class="block px-4 py-2 text-sm text-gray-300 hover:bg-custom-accent hover:text-white transition-colors duration-300">Profile</a>
+                        <a href="settings.html" class="block px-4 py-2 text-sm text-gray-300 hover:bg-custom-accent hover:text-white transition-colors duration-300">Settings</a>
+                        <a href="index.html" class="block px-4 py-2 text-sm text-gray-300 hover:bg-custom-accent hover:text-white transition-colors duration-300">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-                    <div class="relative">
-                        <button class="bg-gray-300 text-gray-700 px-4 py-2 rounded-lg"
-                            id="user-button"> Menu <i
-                                class="fas fa-caret-down ml-2"></i></button>
-                        <div class="absolute right-0 mt-2 w-48 bg-gray-200 rounded-lg shadow-lg hidden"
-                            id="user-menu">
-                            <a href="#"
-                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300">Profile</a>
-                            <a href="settings.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300">Settings</a>
-                            <a href="index.html"
-                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300">Logout</a>
+    <!-- Content -->
+    <main class="flex-1 overflow-y-auto p-4">
+        <div class="container mx-auto">
+            <div class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg rounded-lg p-6 mb-8 shadow-lg border border-custom-accent border-opacity-30 transform hover:scale-105 transition-transform duration-300">
+                <h1 class="text-4xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-custom-accent to-purple-400" id="welcome-title">Welcome to your dashboard</h1>
+                <p class="text-lg text-gray-300" id="welcome-message">Here you can manage your trucks, invoices, and more.</p>
+            </div>
+
+            <div class="dashboard-container">
+                <h2 class="text-3xl font-bold mb-4 text-custom-accent">Dashboard</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <a href="jwtruck.html" class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg hover:bg-opacity-50 rounded-lg p-6 flex flex-col items-center justify-center transition duration-300 shadow-lg border border-custom-accent border-opacity-30 group float">
+                        <div class="text-6xl mb-4 text-custom-accent group-hover:scale-110 transition-transform duration-300"><i class="fas fa-truck"></i></div>
+                        <div class="text-2xl font-medium mb-4 text-custom-accent">Truck Details</div>
+                        <div class="text-lg text-center text-gray-300">View and manage truck information.</div>
+                    </a>
+                    <a href="jwnew.html" class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg hover:bg-opacity-50 rounded-lg p-6 flex flex-col items-center justify-center transition duration-300 shadow-lg border border-custom-accent border-opacity-30 group float">
+                        <div class="text-6xl mb-4 text-custom-accent group-hover:scale-110 transition-transform duration-300"><i class="fas fa-plus"></i></div>
+                        <div class="text-2xl font-medium mb-4 text-custom-accent">New Trucks</div>
+                        <div class="text-lg text-center text-gray-300">Add new trucks.</div>
+                    </a>
+                    <a href="report.html" class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg hover:bg-opacity-50 rounded-lg p-6 flex flex-col items-center justify-center transition duration-300 shadow-lg border border-custom-accent border-opacity-30 group float">
+                        <div class="text-4xl mb-2 text-custom-accent group-hover:scale-110 transition-transform duration-300"><i class="fas fa-file-alt"></i></div>
+                        <div class="text-2xl font-medium mb-4 text-custom-accent">Reports</div>
+                        <div class="text-lg text-center text-gray-300">View and manage reports.</div>
+                    </a>
+                    <a href="shortages.html" class="bg-custom-dark-secondary bg-opacity-30 backdrop-filter backdrop-blur-lg hover:bg-opacity-50 rounded-lg p-6 flex flex-col items-center justify-center transition duration-300 shadow-lg border border-custom-accent border-opacity-30 group float">
+                        <div class="text-6xl mb-4 text-custom-accent group-hover:scale-110 transition-transform duration-300"><i class="fas fa-clipboard-list"></i></div>
+                        <div class="text-2xl font-medium mb-4 text-custom-accent">Shortages Report</div>
+                        <div class="text-lg text-center text-gray-300">Shortages and analytics Reports.</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- The Modal -->
+    <div id="myModal" class="fixed z-10 inset-0 overflow-y-auto hidden">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+            </div>
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+            <div class="inline-block align-bottom bg-custom-dark-secondary bg-opacity-90 backdrop-filter backdrop-blur-lg rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                <div class="bg-custom-dark-secondary px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                            <h3 class="text-lg leading-6 font-medium text-custom-accent" id="modal-title">
+                                Session Timeout
+                            </h3>
+                            <div class="mt-2">
+                                <p class="text-sm text-gray-300">
+                                    Your session will end soon due to inactivity.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <!-- Content -->
-        <div class="flex-1 overflow-y-auto p-4 flex flex-col items-center">
-            <div class="welcome-container mb-18">
-                <h1 class="text-4xl font-bold mb-4" id="welcome-title">Welcome to your <span
-                        id="issaerium"></span>
-                    dashboard</h1>
-                <p class="text-lg" id="welcome-message">Here you can manage your trucks, invoices, and more.
-                </p>
-            </div>
-
-            <div class="flex-1 p-7">
-
-                <!-- Dashboard content -->
-
-                <div class="dashboard-container">
-                    <h2 class="text-3xl font-bold mb-4">Dashboard</h2>
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                        <a href="jwtruck.html"
-                            class="bg-gray-300 hover:bg-gray-400 text-gray-700 rounded-lg p-6 flex flex-col items-center justify-center"
-                            data-name="Truck Details">
-                            <div class="text-6xl mb-4"><i class="fas fa-truck"></i></div>
-                            <div class="text-2xl font-medium mb-4">Truck Details</div>
-                            <div class="text-lg text-center">View and manage truck information.</div>
-                        </a>
-                        <a href="jwnew.html"
-                            class="bg-gray-300 hover:bg-gray-400 text-gray-700 rounded-lg p-6 flex flex-col items-center justify-center"
-                            data-name="Work Details">
-                            <div class="text-6xl mb-4"><i class="fas fa-plus"></i></div>
-                            <div class="text-2xl font-medium mb-4">New trucks</div>
-                            <div class="text-lg text-center">Add new trucks.</div>
-                        </a>
-                        <a href="report.html"
-                        class="dashboard-item bg-gray-300 hover:bg-gray-400 text-gray-700 rounded-lg p-6 flex flex-col items-center justify-center"
-                        data-name="Reports">
-                        <div class="text-4xl mb-2"><i class="fas fa-file-alt"></i></div>
-                        <div class="text-lg font-medium mb-2">Reports</div>
-                        <div class="text-sm text-center">View and manage reports.</div>
-                        </a>
-                        <a href="shortages.html"
-                        class="bg-gray-300 hover:bg-gray-400 text-gray-700 rounded-lg p-6 flex flex-col items-center justify-center"
-                        data-name="New Trucks">
-                        <div class="text-6xl mb-4"><i class="fas fa-clipboard-list"></i></div>
-                        <div class="text-2xl font-medium mb-4">Shortages Report</div>
-                        <div class="text-lg text-center">Shortages and analytics Reports.</div>
-                    </a>
-
-                    </div>
+                <div class="bg-custom-dark-secondary px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <button type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-custom-accent text-base font-medium text-white hover:bg-custom-accent-hover focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-custom-accent sm:ml-3 sm:w-auto sm:text-sm transition-colors duration-300">
+                        Stay Logged In
+                    </button>
+                    <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-custom-dark text-base font-medium text-gray-300 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm transition-colors duration-300">
+                        Logout
+                    </button>
                 </div>
             </div>
-        </div>
-
-    </div>
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Your session will end soon due to inactivity.</p>
         </div>
     </div>
 
@@ -214,8 +165,25 @@ body {
             // Hide the menu
             userMenu.classList.add("hidden");
         });
+
+        // Particle.js configuration
+        particlesJS("particles-js", {
+            particles: {
+                number: { value: 80, density: { enable: true, value_area: 800 } },
+                color: { value: "#58a6ff" },
+                shape: { type: "circle" },
+                opacity: { value: 0.5, random: false, anim: { enable: false } },
+                size: { value: 3, random: true, anim: { enable: false } },
+                line_linked: { enable: true, distance: 150, color: "#58a6ff", opacity: 0.4, width: 1 },
+                move: { enable: true, speed: 2, direction: "none", random: false, straight: false, out_mode: "out", bounce: false }
+            },
+            interactivity: {
+                detect_on: "canvas",
+                events: { onhover: { enable: true, mode: "repulse" }, onclick: { enable: true, mode: "push" }, resize: true },
+                modes: { repulse: { distance: 100, duration: 0.4 }, push: { particles_nb: 4 } }
+            },
+            retina_detect: true
+        });
     </script>
-
 </body>
-
 </html>
